[#96694232] fix calendar navbar overlaps

--- a/src/modules/scheduling/css/calendar.scss
+++ b/src/modules/scheduling/css/calendar.scss
@@ -257,3 +257,16 @@
         }
     }
 }
+
+@media (min-width : 769px) and (max-width : 1022px){
+    [state^="scheduling"] .calendar-container .calendar .fc-center {
+        top: 30px;
+        left: -150px;
+        .fc-prev-button{
+            left:35px;
+        }
+        .fc-next-button{
+            right:35px;
+        }
+    }
+}
